		 replaced with RegisterInitializer(Action<InstanceInitializationData>, Predicate<InitializerContext>)
		 method. (fixes #348)
		-[Core] Registration instances will now get cached to prevent torn lifestyles. (fixes #219)
		-[Core] Short Circuited Dependency warning will now go off as well for transient registrations (fixes #248)

	Improvements/Changes:
		-[Core] Removed all methods that were marked [obsolete(true)] since v3.0. (fixes #305)
		-[Core] ThreadScopedLifestyle added to core library as replacement of LifetimeScopeLifestyle. (fixes #299)
		-[Core] AsyncScopedLifestyle added to core library as replacement of ExecutionContextScopeLifestyle. (fixes #299)
		-[Core] New Lifestyle.CreateHybrid overloads added for ScopedLifestyles that remove the need to supply
		 an lifestyleSelector delegate. (fixes #341)
		-[Core] InstanceProducer.FromExpression() added. (fixes #346)
		-[Core] Prevented registered predicates (using RegisterConditional) from always being called twice. (fixes #346)
		-[Core] TypesExtensions class added with three useful extension methods on Type: ToFriendlyName,
		 IsClosedTypeOf, GetClosedTypeOf and GetClosedTypesOf methods. (fixes #358)
		-[Core] Container.AddRegistration<TService>(Registration) method added. (fixes #367)
		-[Core] Stack trace added to exception that gets thrown when container got disposed. (fixes #368)

	Project Changes:
		-Projects for SimpleInjector.dll merged into one single project.
		-Test projects for SimpleInjector core library merged into one single project.
		-Projects for SimpleInjector.Extensions.ExecutionContextScoping.dll merged into one single project.
		-Projects for SimpleInjector.Extensions.LifetimeScoping.dll merged into one single project.
		-Moved from NUnit to MSTest, since MSTest now supports .NET Core projects and will run cross-platform
		 and NUnit is very unreliable under .NET Core.
		-Allowed the projects to compile in the absence of the real strong name key.


Version 3.3.1 (v3.3.1 RTM) 2016-11-23