@@ -36,6 +36,7 @@ Version 4.0.0 (v4.0 RTM)
 		 method. (fixes #348)
 		-[Core] Registration instances will now get cached to prevent torn lifestyles. (fixes #219)
 		-[Core] Short Circuited Dependency warning will now go off as well for transient registrations (fixes #248)
+		-[Packaging] RegisterPackages(Container) method marked obsolete. (fixes #372)
 
 	Improvements/Changes:
 		-[Core] Removed all methods that were marked [obsolete(true)] since v3.0. (fixes #305)
